# argc

./: .gitattributes  .gitignore  .gitmodules  BUILDING.MD  CMakeLists.txt  LLVM.MD  README.MD  README.md  build.sh  index.html  main.ar  output
arc/: CMakeLists.txt  GRAMMAR.MD  Makefile  ast.cc  ast.hh  expr.cc  func.cc  ident.cc  include.md  input.txt  lexer.cc  lexer.hh  lexer.l  lexer.ll  location.hh  main.cc  module.cc  parser.cc  parser.hh  parser.yy  prog.cc  reader.cc  stmt.cc  symbols.cc  symbols.hh  two.txt
arc/docs/: GRAMMAR.MD
arc/include/: analyser.hh  ast.hh  checker.hh  config.hh  driver.hh  include_handler.hh  logger.hh  reader.hh  stages.hh  symbols.hh
arc/src/: analyser.cc  ast_expr.cc  ast_func.cc  ast_module.cc  ast_prog.cc  ast_stmt.cc  checker.cc  driver.cc  expr.cc  func.cc  ident.cc  include_handler.cc  lexer.ll  logger.cc  main.cc  param.cc  parser.yy  prog.cc  stmt.cc  symbols.cc  util_logger.cc
arc/tests/: expressions.ar  functions.ar  loops.arg  modules.arg  modules_include.arg  return.arg  statements.ar
argc/: ISSUES.MD  Makefile  README.md  ROADMAP.MD
argc/asm/: asm.md
argc/asm/gas/: 01_exit.asm  02_hello_world.asm  03_mov_add_sub.asm  04_arithmetic.asm  05_bitwise.asm  06_comparisons.asm  07_conditionals.asm  08_loops.asm  09_arrays.asm  10_functions.asm  11_functions_params.asm  12_functions_return.asm  13_functions_multiple_return.asm  14_stack.asm  15_scope_local_vars.asm  16_recursion.asm  17_structs.asm  18_strings.asm  19_switch_case.asm  20_macros.asm  20_macros2.asm  20_macros3.asm
argc/asm/gas/macro-lib/: advanced_macros.asm  macros.asm  main.asm  usage.md
argc/asm/nasm/: 1_exit.asm  2_format.asm
argc/docs/: logger.md
argc/include/: analyser.hh  ast.hh  checker.hh  codegen.hh  config.hh  driver.hh  error_handler.hh  include_handler.hh  operators.hh  semantic_analyser.hh  sym_table.hh  symbol_collector.hh  symbols.hh  type_checker.hh  util_logger.hh  x86_64_codegen.hh  x86_64_visitor.hh
argc/src/: accept.cc  analyser.cc  ast.cc  ast_expr.cc  ast_func.cc  ast_ident.cc  ast_mod.cc  ast_module.cc  ast_param.cc  ast_prog.cc  ast_stmt.cc  ast_unit.cc  checker.cc  codegen.cc  config.cc  driver.cc  gen_asm_stmt.cc  gen_unit.cc  include_handler.cc  lexer.hh  lexer.l  lexer.ll  main.cc  parser.yy  printer.cc  sema_function.cc  sema_module.cc  semantic_analyser.cc  sym_table.cc  symbol_collector.cc  symbol_table.cc  symbols.cc  type_checker.cc  util_logger.cc  x86_64_codegen.cc
argc/tests/: expr2.arg  expr3.ar  modules.arg
arlib/: README.md
asm/: demo.asm  one.asm  two.asm
cmake/: DetectPlatform.cmake
cmake/toolchains/: clang-toolchain.cmake  gcc-toolchain.cmake
docs/: BUILD.md  CMakeLists.txt  Doxyfile.in  PROJECT_STRUCTURE.md  README.md  arithetic_expressions.md  index.html  mkdocs.yml  modules.md  naming_conventions.md  precedence.md
docs/docs/: index.md
docs/pages/: building.md  main.md
docs/play/: index.html
docs/play/assets/: index-C49O5LbC.js  index-C86tNcF0.css
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
docs/specs/: numeric_types.md  string_char_types.md
examples/: 1_ret.ar  1_ret.asm  1_return.ar  1_return.asm  2_func.ar  2_func.asm  2_print.ar  2_var.ar  3_func.ar  3_module.ar  3_var.ar  4_print.ar  5_err.ar  6_expr.ar  CMakeLists.txt  num.cc
examples/1/: 1_module.ar  2_functions.ar
examples/2/: 1.ar
grammar/: Argon.g4
include/: Ast.hh  AstBuilder.hh  ConfigHandler.hh  ErrorReporter.hh  SourceLocation.hh  SymbolCollector.hh  SymbolTable.hh  config.h.in
input/: 1.ar
play/: .gitignore  1.c  2.c  3.c  README.md  demo.c  factorial.c  index.html  loop.c  one.c  package.json  simple.c  tailwind.config.js  test.c  tsconfig.app.json
play/1/: CMakeLists.txt
play/1/docs/: concepts.md  grammar.md
play/1/examples/: 1_return.tisa
play/1/src/: AST.hxx  FileHandler.hxx  Lexer.hxx  Main.cxx  Parser.hxx  Registry.hxx  SourceLocation.hxx  Token.hxx  TokenType.hxx  Visitor.cxx
play/ar/: AST.hxx  Analyser.hxx  FileHandler.hxx  Lexer.hxx  Parser.hxx  Registry.hxx  Token.hxx
play/ar/examples/: main.ar
play/ar/old/1/: AST.hxx  Analyser.hxx  CMakeLists.txt  Lexer.hxx  Main.cxx  Parser.hxx  SourceLocation.hxx  TokenType.hxx  Visitor.cxx
play/ar/old/1/examples/: exit1.ar
play/new/: CMakeLists.txt
play/new/examples/: source.ar
play/new/notes/: 01_intro.md
play/new/old/: AST.hxx  Analyser.hxx  Lexer.hxx  Main.cxx  Registry.hxx  SymbolTable.hxx  Token.hxx  TokenType.hxx
play/new/src/: AST.hxx  Lexer.hxx  Main.cxx  Parser.hxx  Registry.hxx  SourceFileHandler.hxx  SourceLocation.hxx  SyntaxAnalyser.hxx  Token.hxx  TokenType.hxx
play/src/: App.tsx  index.css
play/src/components/: CodeEditor.tsx  ConsolePanel.tsx  FileExplorer.tsx  Layout.tsx
play/src/components/UI/: Button.tsx  Tabs.tsx  index.ts
play/src/hooks/: useCompiler.ts
play/src/lib/: compiler.ts
play/src/stores/: fileSystemStore.ts
play/src/types/: compiler.types.ts  filesystem.types.ts
scripts/: build.sh
spec/: Modules.md  README.md  ROADMAP.md  Semantics.md  Syntax.md  build-system.md  ffi.md  functions.md  index.md  lexical-structure.md  memory-model.md  references.md  type-system.md
src/: AstBuilder.cc  CMakeLists.txt  Main.cc  SymbolCollector.cc  SymbolTable.cc  ast.hxx  file_utils.hxx  main.cxx  parser.hxx  token.hxx  visitor.cxx
src/analyser/: semantic_error.hxx  user_type.hxx
src/ast/: ast.hxx  visitor.cxx
src/lexer/: lexer.cxx  lexer.hxx
src/parser/: parser.cxx  parser.hxx
src/registry/: registry.hxx
src/token/: token.hxx
src/utils/: reader.cxx  reader.hxx  writer.cxx  writer.hxx
syntax/: 1.ar
tests/: SymbolTableTests.cc
